# pyext2

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  tmp.py
pyext2/: __init__.py  __main__.py  ext2reader.py  inode.py  parser.py
