[tool.poetry]
name = "pyext2"
version = "0.0.1"
description = "Simple ext2 implementation"

license = "MIT"

authors = [
    "Szymon Rams <szymon.rams@icloud.com>"
]

readme = "README.md"

repository = "https://github.com/szymon/pyext2"
homepage = "https://github.com/szymon/pyext2"

[tool.poetry.dependencies]
python = "^3.9"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100